--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Login Sederhana mantap done</title>
-  <title>Login Sederhana oke</title>
+  <title>Login Sederhana oke1</title>
   <title>Login Sederhana lagi</title>
   <link rel="stylesheet" href="style.css" />
 </head>
