--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Login Sederhana done</title>
-  <title>Login Sederhana oke</title>
-  <title>Login Sederhana</title>
+  <title>Login</title>
+  <title>Login</title>
+  <title>Login</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
